# t-rex-runner

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: obstacles.hpp
source/: dinosaur.cpp  game.cpp  gui.cpp  hud.cpp  main.cpp  obstacles.cpp
